[project]
name = "temporal-ame-svi"
version = "0.1.0"
description = "Structured Variational Inference for Temporal AME Network Models"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{name = "Sean Plummer", email = "seanp@uark.edu"}]
keywords = ["network models", "variational inference", "temporal networks", "AME"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

packages = [
  { include = "temporal_ame_svi", from = "src" }
]

dependencies = [
  "torch>=1.10.0",
  "numpy>=1.20.0",
  "scipy>=1.6.0",
  "matplotlib>=3.3.0",
  "seaborn>=0.11.0",
  "jupyter>=1.0.0",
  "pandas>=1.2.0",
  "tqdm>=4.60.0",
  "pytest>=6.0.0",
  "black>=21.0",
  "flake8>=3.9.0",
  "mypy>=0.910"
]

[tool.poetry.dependencies]
python = ">=3.8"
torch = ">=1.10.0"
numpy = ">=1.20.0"
scipy = ">=1.6.0"
matplotlib = ">=3.3.0"
seaborn = ">=0.11.0"
tqdm = ">=4.60.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.0.0"
pytest-cov = ">=4.0.0"
black = ">=21.0"
flake8 = ">=3.9.0"
mypy = ">=0.910"

[tool.poetry.group.notebook.dependencies]
jupyter = ">=1.0.0"
pandas = ">=1.2.0"
